fixed spacing2

--- a/css/style.css
+++ b/css/style.css
@@ -360,6 +360,7 @@ nav{
 
 .interests-container{
     margin-top: 2rem;
+    height: 9rem;
 }
 
 /* .about-title h6{
